--- a/ecommerce/templates/index.html
+++ b/ecommerce/templates/index.html
@@ -1,5 +1,51 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
+    <div class="site-blocks-cover" style="background-image: url({% static 'images/hero.jpg' %});" data-aos="fade">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 pt-5 pt-md-0">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="site-section site-section-sm site-blocks-1">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="">
+                    <div class="icon mr-4 align-self-start">
+                        <span><i class="fab fa-cc-paypal"></i></span>
+                    </div>
+                    <div class="text">
+                        <h2 class="text-uppercase">Pay with Paypal</h2>
+                        <p>Use server-side PayPal integration for handling payments.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="100">
+                    <svg style="width: 100px; margin-right: 10px;" xmlns="http://www.w3.org/2000/svg" role="img"
+                        fill="#1f4f7c" viewBox="0 0 24 24">
+                        <title>Stripe</title>
+                        <path d="M13.976 9.15c-2.172-.806-3.356-1.426-3.356-2.409 0-.831.683-1.305 1.901-1.305 2.227 0 4.515.858 6.09 1.631l.89-5.494C18.252.975 15.697 0 12.165 0 9.667 0 7.589.654 6.104 1.872 4.56 3.147 3.757 4.992 3.757 7.218c0 4.039 2.467 5.76 6.476 7.219 2.585.92 3.445 1.574 3.445 2.583 0 .98-.84 1.545-2.354 1.545-1.875 0-4.965-.921-6.99-2.109l-.9 5.555C5.175 22.99 8.385 24 11.714 24c2.641 0 4.843-.624 6.328-1.813 1.664-1.305 2.525-3.236 2.525-5.732 0-4.128-2.524-5.851-6.594-7.305h.003z"/>
+                    </svg>
+                    <div class="text">
+                        <h2 class="text-uppercase">Pay with Paypal</h2>
+                        <p>Use server-side Stripe integration for handling payments.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock content %}
+
+
+
+<svg style="width: 100px; margin-right: 10px;" xmlns="http://www.w3.org/2000/svg" role="img"
+ fill="#1f4f7c" viewBox="0 0 24 24">
+<title>Stripe</title>
+<path d="M13.976 9.15c-2.172-.806-3.356-1.426-3.356-2.409 0-.831.683-1.305 1.901-1.305 2.227 0 4.515.858 6.09 1.631l.89-5.494C18.252.975 15.697 0 12.165 0 9.667 0 7.589.654 6.104 1.872 4.56 3.147 3.757 4.992 3.757 7.218c0 4.039 2.467 5.76 6.476 7.219 2.585.92 3.445 1.574 3.445 2.583 0 .98-.84 1.545-2.354 1.545-1.875 0-4.965-.921-6.99-2.109l-.9 5.555C5.175 22.99 8.385 24 11.714 24c2.641 0 4.843-.624 6.328-1.813 1.664-1.305 2.525-3.236 2.525-5.732 0-4.128-2.524-5.851-6.594-7.305h.003z"/>
+</svg>
